# media-sync

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: fs.rs  main.rs
src/fs/: cow.rs  dry.rs  metadata.rs  stat.rs
