[package]
name = "media-sync"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
argh = "0.1.13"
bitflags = "2.9.0"
chrono = "0.4.41"
mediameta = { version = "0.2.1", features = ["mediainfo"] }
#mediameta = { git = "https://github.com/Vaiz/mediameta.git", features = ["mediainfo"] }
reflink-copy = "0.1.26"
walkdir = "2.5.0"
